ceph.spec.in: tweak ceph-common for SUSE/openSUSE
ceph-common needs python-argparse in SUSE/openSUSE and
needs redhat-lsb-core only in RHEL/CentOS/Fedora.

http://tracker.ceph.com/issues/11638 Fixes: #11638

Signed-off-by: Nathan Cutler <ncutler@suse.cz>
(cherry picked from commit 363d957d8fdd15a1674befbd8e485fd89b76d716)

Conflicts:
	ceph.spec.in

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -106,11 +106,13 @@ Requires:	librbd1 = %{version}-%{release}
 Requires:	librados2 = %{version}-%{release}
 Requires:	python-ceph = %{version}-%{release}
 Requires:	python-requests
-Requires:	redhat-lsb-core
 # python-argparse is only needed in distros with Python 2.6 or lower
 %if (0%{?rhel} && 0%{?rhel} <= 6) || (0%{?suse_version} && 0%{?suse_version} <= 1110)
 Requires:	python-argparse
 BuildRequires:	python-argparse
+%endif
+%if 0%{?rhel} || 0%{?fedora}
+Requires:  redhat-lsb-core
 %endif
 %description -n ceph-common
 common utilities to mount and interact with a ceph storage cluster
