--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -471,7 +471,8 @@ librbd1 or libcephfs1 instead.
 Summary:	Compatibility package for Ceph headers
 Group:		Development/Libraries
 License:	LGPL-2.0
-Obsoletes:	ceph-devel
+Provides:	ceph-devel = %{version}-%{release}
+Obsoletes:	ceph-devel < %{version}-%{release}
 Requires:	%{name} = %{version}-%{release}
 Requires:	librados2-devel = %{version}-%{release}
 Requires:	libradosstriper1-devel = %{version}-%{release}
@@ -480,7 +481,6 @@ Requires:	libcephfs1-devel = %{version}-%{release}
 %if 0%{with cephfs_java}
 Requires:	libcephfs_jni1-devel = %{version}-%{release}
 %endif
-Provides:	ceph-devel
 %description devel-compat
 This is a compatibility package to accommodate ceph-devel split into
 librados2-devel, librbd1-devel and libcephfs1-devel. Packages still depending
@@ -491,11 +491,11 @@ libcephfs1-devel or libradosstriper1-devel instead.
 Summary:	Compatibility package for Cephs python libraries
 Group:		System Environment/Libraries
 License:	LGPL-2.0
-Obsoletes:	python-ceph
+Provides:	python-ceph = %{version}-%{release}
+Obsoletes:	python-ceph < %{version}-%{release}
 Requires:	python-rados = %{version}-%{release}
 Requires:	python-rbd = %{version}-%{release}
 Requires:	python-cephfs = %{version}-%{release}
-Provides:	python-ceph
 %description -n python-ceph-compat
 This is a compatibility package to accommodate python-ceph split into
 python-rados, python-rbd and python-cephfs. Packages still depending on
